[package]
name = "pillid"
version = "0.3.0"
authors = ["Aditya Pillai <github.4nsjt@simplelogin.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/pilleye/pillid"
description = "A tinier, prefixed, URL-friendly, time-sortable, unique ID storable on the stack."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
smartstring = { version = "1.0.1", optional = true }

[dev-dependencies]
doc-comment = "0.3"

[features]
default = []
smartstring = ["dep:smartstring"]
