[package]
name = "pillid"
version = "0.4.0"
authors = ["Aditya Pillai <github.4nsjt@simplelogin.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/pilleye/pillid"
description = "A tinier, prefixed, URL-friendly, time-sortable, unique ID storable on the stack."

[dependencies]
rand = { version = "0.9.1", features = ["small_rng", "thread_rng"] }
paste = "1"
serde = { version = "1", features = ["derive"], optional = true }
sqlx = { version = "0.9", optional = true }

[features]
default = []
serde = ["dep:serde"]
sqlx = ["dep:sqlx"]
